--- a/css/styles.css
+++ b/css/styles.css
@@ -12781,10 +12781,11 @@ body {
 }
 
 .terminal {
-    background-color: black;
-    color: white;
+    background-color: rgba(var(--bs-dark-rgb), 0.80);
+    color: rgba(var(--bs-light-rgb), 1.0);
     overflow-y: auto;
     border-radius: 1rem;
+    height: 80vh;
 }
 
 .terminal #terminal-input {
@@ -12793,7 +12794,7 @@ body {
 }
 
 .terminal #terminal-input-field {
-    background-color: black; 
+    background-color: inherit; 
     color: white;
     border: none;
     outline: none;
@@ -12819,4 +12820,25 @@ body {
     max-width: 100%;
     height: auto;
     border: 0.25rem solid white;
+}
+
+/* Additional portfolio style */
+/* Taken from https://codepen.io/baarbaracrr/pen/KKovmGb */
+.portfolio-section {
+    background: linear-gradient(315deg, rgba(101,0,94,1) 3%, rgba(60,132,206,1) 38%, rgba(48,238,226,1) 68%, rgba(255,25,25,1) 98%);
+    animation: gradient 15s ease infinite;
+    background-size: 400% 400%;
+    background-attachment: fixed;
+}
+
+@keyframes gradient {
+    0% {
+        background-position: 0% 0%;
+    }
+    50% {
+        background-position: 100% 100%;
+    }
+    100% {
+        background-position: 0% 0%;
+    }
 }
